--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is where you add your meta description. Make it count.">
+    <meta name="google-site-verification" content="eky70sM64wYp6myuGn5IyCLSuLVcKkeNNNeJiLK5mTY" />
     <title>DigitalUIDesign</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
