--- a/logo.html
+++ b/logo.html
@@ -81,7 +81,7 @@
              <div class="box1 wow animate__animated animate__jackInTheBox">
             <i class="far fa-map"></i>
             <h3>our location</h3>
-            <p>mumbai, india 400104</p>
+            <p>jaipur, rajasthan 302019</p>
         </div>
 
         <div class="box1 wow animate__animated animate__jackInTheBox">
@@ -94,7 +94,7 @@
         <div class="box1 wow animate__animated animate__jackInTheBox">
             <i class="far fa-envelope"></i>
             <h3>our email</h3>
-            <p>example@gmail.com</p>
+            <p>digitaluidesign@gmail.com</p>
         </div>
 
     </div>
