--- a/cards&temp.html
+++ b/cards&temp.html
@@ -144,7 +144,7 @@
              <div class="box1 wow animate__animated animate__jackInTheBox">
             <i class="far fa-map"></i>
             <h3>our location</h3>
-            <p>mjaipur, rajasthan 302019</p>
+            <p>jaipur, rajasthan 302019</p>
         </div>
 
         <div class="box1 wow animate__animated animate__jackInTheBox">
