--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                             </div>
                             <div class="footer-text">
                                 <p>Contact</p>
-                                <p>Address : to be filled</p>
+                                <p>Address : jaipur, rajasthan 302019</p>
                                 <p>phone number : to be filled</p>
-                                <p>email: to be filled</p>
+                                <p>email: digitaluidesign@gmail.com</p>
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
