--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is where you add your meta description. Make it count.">
+    <meta name="description" content="Thinking of starting a project? Need a basic design? DISCOVER, PLAN and GET a Unique, Relevant graphic design from DIGITALUIDESIGN.">
     <meta name="google-site-verification" content="eky70sM64wYp6myuGn5IyCLSuLVcKkeNNNeJiLK5mTY" />
     <title>DigitalUIDesign</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
