--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <div class="footer-text">
                                 <p>Contact</p>
                                 <p>Address : jaipur, rajasthan 302019</p>
-                                <p>phone number : to be filled</p>
+                                <p>phone number :+91 9352783158</p>
                                 <p>email: digitaluidesign@gmail.com</p>
                             </div>
                             <div class="footer-social-icon">
