--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="images/home/ico.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Thinking of starting a project? Need a basic design? DISCOVER, PLAN and GET a Unique, Relevant graphic design from DIGITALUIDESIGN.">
     <meta name="google-site-verification" content="eky70sM64wYp6myuGn5IyCLSuLVcKkeNNNeJiLK5mTY" />
