--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
                             </div>
                             <div class="footer-text">
                                 <p>Contact</p>
-                                <p>Address : jaipur, rajasthan 302019</p>
-                                <p>phone number :+91 9352783158</p>
-                                <p>email: digitaluidesign@gmail.com</p>
+                                <p>Address : Jaipur, Rajasthan 302019</p>
+                                <p>Phone number :+91 9352783158</p>
+                                <p>Email: digitaluidesign@gmail.com</p>
                             </div>
                             <div class="footer-social-icon">
                                 <span>Follow us</span>
