--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Thinking of starting a project? Need a basic design? DISCOVER, PLAN and GET a Unique, Relevant graphic design from DIGITALUIDESIGN.">
     <meta name="google-site-verification" content="eky70sM64wYp6myuGn5IyCLSuLVcKkeNNNeJiLK5mTY" />
+    <meta name="p:domain_verify" content="d372b9fe82b38816fd1f65a673d8f4bc"/>
     <title>DigitalUIDesign</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
