--- a/graphics.html
+++ b/graphics.html
@@ -137,7 +137,12 @@
                 <div class="swiper-slide"><img src="images/UI UX/sample ui2.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui3.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui4.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/sample ui5.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui6.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/sample ui7.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/sample ui8.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/sample ui9.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/sample ui10.png" alt=""></div>
             </div>
         </div>
     </section>
