--- a/cards&temp.html
+++ b/cards&temp.html
@@ -104,6 +104,12 @@
         <input type="radio" name="filter" id="Cards"><label for="Cards">Cards</label>
 
         <div class="gallery">
+            <figure class="card Cards">
+                <img class="card__image" loading="lazy" src="images/card/sample card6.png" alt="">
+            </figure>
+            <figure class="card Templates">
+                <img class="card__image" loading="lazy" src="images/card/sample card5.png" alt="">
+            </figure>
             <figure class="card Templates">
                 <img class="card__image" loading="lazy" src="images/template/sample template1.png" alt="">
             </figure>
@@ -131,6 +137,7 @@
             <figure class="card Cards">
                 <img class="card__image" loading="lazy" src="images/card/sample card5.png" alt="">
             </figure>
+            
         </div>
     </section>
 
