--- a/cards&temp.html
+++ b/cards&temp.html
@@ -108,7 +108,7 @@
                 <img class="card__image" loading="lazy" src="images/card/sample card6.png" alt="">
             </figure>
             <figure class="card Templates">
-                <img class="card__image" loading="lazy" src="images/card/sample card5.png" alt="">
+                <img class="card__image" loading="lazy" src="images/template/sample template5.png" alt="">
             </figure>
             <figure class="card Templates">
                 <img class="card__image" loading="lazy" src="images/template/sample template1.png" alt="">
