--- a/cards&temp.html
+++ b/cards&temp.html
@@ -107,8 +107,8 @@
             <figure class="card Cards">
                 <img class="card__image" loading="lazy" src="images/card/sample card1.png" alt="">
             </figure>
-            <figure class="card Templates">
-                <img class="card__image" loading="lazy" src="images/template/sample template5.png" alt="">
+            <figure class="card Cards">
+                <img class="card__image" loading="lazy" src="images/card/sample card4.png" alt="">
             </figure>
             <figure class="card Templates">
                 <img class="card__image" loading="lazy" src="images/template/sample template1.png" alt="">
