--- a/cards&temp.html
+++ b/cards&temp.html
@@ -134,6 +134,9 @@
             <figure class="card Cards">
                 <img class="card__image" loading="lazy" src="images/card/sample card8.png" alt="">
             </figure>
+            <figure class="card Templates">
+                <img class="card__image" loading="lazy" src="images/template/sample template5.png" alt="">
+            </figure>
             <figure class="card Cards">
                 <img class="card__image" loading="lazy" src="images/card/sample card3.png" alt="">
             </figure>
