--- a/cards&temp.html
+++ b/cards&temp.html
@@ -140,7 +140,9 @@
             <figure class="card Cards">
                 <img class="card__image" loading="lazy" src="images/card/sample card3.png" alt="">
             </figure>
-            
+            <figure class="card Templates">
+                <img class="card__image" loading="lazy" src="images/template/sample template6.png" alt="">
+            </figure>
         </div>
     </section>
 
