--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="butterfly.css">
+    //<link rel="stylesheet" href="butterfly.css">
     <link rel="stylesheet" href="animate.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWFVRW5CF5"></script>
@@ -62,6 +62,7 @@
     </section>
 
     <!-- for background effect -->
+   <!-- <div class="firefly"></div>
     <div class="firefly"></div>
     <div class="firefly"></div>
     <div class="firefly"></div>
@@ -75,8 +76,7 @@
     <div class="firefly"></div>
     <div class="firefly"></div>
     <div class="firefly"></div>
-    <div class="firefly"></div>
-    <div class="firefly"></div>
+    <div class="firefly"></div> -->
 
     <!-- about section  of home page  -->
     <section class="about" id="about">
