--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
     <link rel="stylesheet" href="style.css">
     <!--<link rel="stylesheet" href="butterfly.css">-->
     <link rel="stylesheet" href="animate.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GWFVRW5CF5"></script>
-    
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XK94VB65Y"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GWFVRW5CF5');
+  gtag('config', 'G-6XK94VB65Y');
 </script>
-
 </head>
 
 <body>
