--- a/ppt.html
+++ b/ppt.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XK94VB65Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-6XK94VB65Y');
+</script>
 </head>
 
 <body>
@@ -107,7 +115,7 @@
         <div class="box1 wow animate__animated animate__jackInTheBox">
             <i class="far fa-address-book"></i>
             <h3>our number</h3>
-            <p>+91 9352783158</p>
+            <p>+91 8696266461</p>
 <!--             <p>+111-222-3333.</p> -->
         </div>
 
