--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <!-- header section  of home page  -->
+    <!-- header section  of home page le -->
     <header>
         <a href="#" class="logo"><span>DigitalUI</span>Design</a>
         <input type="checkbox" id="menu-bar">
