--- a/graphics.html
+++ b/graphics.html
@@ -147,10 +147,12 @@
                 <div class="swiper-slide"><img src="images/UI UX/sample ui4.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui5.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui6.png" alt=""></div>
-                <div class="swiper-slide"><img src="images/UI UX/sample ui7.png" alt=""></div>
-                <div class="swiper-slide"><img src="images/UI UX/sample ui8.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/aaa.jpg"        alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/255.jpg"        alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui9.png" alt=""></div>
                 <div class="swiper-slide"><img src="images/UI UX/sample ui10.png" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/12222.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="images/UI UX/Frame 1.png" alt=""></div>
             </div>
         </div>
     </section>
