--- a/graphics.html
+++ b/graphics.html
@@ -175,7 +175,7 @@
             </div>
             <div class="containerpage">
                 <div class="bodyabc">
-                    <h2>IUUSTRATOR</h2>
+                    <h2>ILLUSTRATOR</h2>
                     <p>Adobe Illustrator is a professional vector-based design and drawing program. </p>
                 </div>
                 <div class="upArrow"></div>
